2005-05-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/convert-ly.py (conv): unfoldrepeats -> unfoldRepeats,
	compressmusic -> compressMusic.

	* ly/music-functions-init.ly (oldaddlyrics): idem.

	* lily/parser.yy: NewLyricCombineMusic ->
	LyricCombineMusic. LyricCombineMusic -> OldLyricCombineMusic.

2005-05-24  Pedro Kroger  <kroeger@pedrokroeger.net>

	* ly/Welcome_to_LilyPond.ly: typo.

2005-05-24  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely: move changing-defaults to be
	before global issues.

	* Documentation/user/basic-notation.itely: move Transpose section
	here from advanced/Other.

	* Documentation/user/changing-defaults.itely,
	advanced-notation.itely: move Fonts to advanced, edit.

2005-05-24  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (bare_int): remove rule.  From now on, we require
	# before negative integers. 

2005-05-23  Graham Percival  <gperlist@shaw.ca>

	* ly/property.ly: Update tieDotted to have the same form as slurDotted.

	* Documentation/user/lilypond.tely: change Unified index to
	LilyPond index.

	* Documentation/user/advanced-notation.itely,
	instrument-notation.itely: editing.

2005-05-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/lily.scm (lilypond-all): Bugfix: return failed.

	* lily/main.cc (setup_paths)[__MINGW32__]: Normalize LILYPONDPREFIX.

2005-05-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/general-scheme.cc (ly:stderr-redirect): Rename from
	ly:port-move.  Needs to be stderr-specific on mingw.
 	Run fixcc.

2005-05-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/general-scheme.cc (ly:port-move): Remove.

	* scm/backend-library.scm (postscript->pdf): Remove -dSAFER in
	windows.

	* lily/main.cc (setup_paths) [ARGV0_RELOCATION]: Reinstate GS_*
	variables.  This eliminates the need for a gs.bat wrapper, which
	opens a console.

	* scripts/lilypond-invoke-editor.scm (running-from-gui?): 
	* scm/lily.scm (running-from-gui?): 